--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -82,6 +82,11 @@ textarea {
     display: block;
   }
 }
+.game__leaderboard{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
 .desktop--modal {
   position: relative;
   display: none;
