--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,7 +2,7 @@
 <% @body_class = 'games-page' %>
 <% end %>
 
-<h1 class="page__title">All Games</h1>
+<h1 class="page__title">Play free games. Earn real cash.</h1>
 
 <div class='game-list-container'>
     <% @games.each do | g | %>
