--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -1,10 +1,20 @@
-<% @body_class = "leaderboard-page" %>
+<% if is_mobile? %>
+  <% @body_class = "leaderboard-page--mobile" %>
+<% else %>
+  <% @body_class = "leaderboard-page" %>
+<% end %>
+
 <% @mobile_container_id = "leaderboard--#{@game.slug}" %>
 
 <section class="leaderboard-nav">
   <a class="leaderboard-back" href="/games/<%= @game.id %>"><i class="fa fa-chevron-left back-button"></i></a>
   <h1 class="leaderboard__title">Leaderboard</h1>
   <p class="leaderboard__subtitle"><%= @game.name %></p>
+</section>
+
+<section class="leaderboard-head">
+  <h1 class="leaderboard-head__title">Leaderboard</h1>
+  <p class="leaderboard-head__game"><%= @game.name %></p>
 </section>
 
 <div class="leaderboard__cat-wrapper">
