added analytics for leaderboard tab activity

--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -19,8 +19,8 @@
 
 <div class="leaderboard__cat-wrapper">
   <div class="leaderboard__cat">
-    <h2 class="cat-title tab-toggle active" data-tab-cat=".leaderboard--all-time">All-Time</h2>
-    <h2 class="cat-title tab-toggle" data-tab-cat=".leaderboard--weekly">Weekly</h2>
+    <h2 class="cat-title tab-toggle ga-tab--alltime active" data-tab-cat=".leaderboard--all-time">All-Time</h2>
+    <h2 class="cat-title tab-toggle ga-tab--weekly" data-tab-cat=".leaderboard--weekly">Weekly</h2>
   </div>
 </div>
 <section class="game-leaderboard">
