--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,19 @@
         h&&h(b,c,d,f,g),g||(g=new Error(b)),a[e].q=a[e].q||[],a[e].q.push({
         e:g})}}(window,document,"script","//cdn.raygun.io/raygun4js/raygun.min.js","rg4js");
       </script>
+
+      <!-- start google analytics -->
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-58032053-2', 'auto');
+        ga('send', 'pageview');
+
+      </script>
+      <!-- end google analytics -->
     <% end %>
   <%= yield(:game_javascript) %>
 
@@ -72,22 +85,14 @@
     </script>
 
   <% if Rails.env.production? %>
-      <!-- google analytics -->
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <!-- GA Tracking Events -->
+    <%= render 'layouts/tracking_events' %>
 
-        ga('create', 'UA-58032053-2', 'auto');
-        ga('send', 'pageview');
-
-      </script>
-        <script type="text/javascript">
-            rg4js('apiKey', 'K9ewfiwAigDX1AXxc+lC0Q==');
-            rg4js('attach', true);
-            rg4js('enablePulse', true);
-          </script>
+    <script type="text/javascript">
+        rg4js('apiKey', 'K9ewfiwAigDX1AXxc+lC0Q==');
+        rg4js('attach', true);
+        rg4js('enablePulse', true);
+    </script>
   <% end %>
 </div><!--/.desktop-wrapper -->
   </body>
