--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -101,6 +101,19 @@
               h&&h(b,c,d,f,g),g||(g=new Error(b)),a[e].q=a[e].q||[],a[e].q.push({
               e:g})}}(window,document,"script","//cdn.raygun.io/raygun4js/raygun.min.js","rg4js");
             </script>
+
+            <!-- start google analytics -->
+            <script>
+              (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+              ga('create', 'UA-58032053-2', 'auto');
+              ga('send', 'pageview');
+
+            </script>
+            <!-- end google analytics -->
         <% end %>
         <%= yield(:game_javascript) %>
     </head>
@@ -258,18 +271,6 @@
         <% end %>
 
          <% if Rails.env.production? %>
-            <!-- google analytics -->
-            <script>
-              (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-              ga('create', 'UA-58032053-2', 'auto');
-              ga('send', 'pageview');
-
-
-            </script>
             <script type="text/javascript">
               rg4js('apiKey', 'K9ewfiwAigDX1AXxc+lC0Q==');
               rg4js('attach', true);
