Added tracking events partial to mobile

--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -271,6 +271,9 @@
         <% end %>
 
          <% if Rails.env.production? %>
+            <!-- GA Tracking Events -->
+            <%= render 'layouts/tracking_events' %>
+
             <script type="text/javascript">
               rg4js('apiKey', 'K9ewfiwAigDX1AXxc+lC0Q==');
               rg4js('attach', true);
