added console.log for confirmation

--- a/app/views/layouts/_tracking_events.html.erb
+++ b/app/views/layouts/_tracking_events.html.erb
@@ -20,6 +20,7 @@ var analytics = {
 
     bind: function() {
         $(analytics.conf.weeklyScoreTab).on('click', function() {
+            console.log('GA weekly tab click');
             var lbname = "Leaderboard Activity";
             analyticsEvent("Weekly Tab", "Click", lbname, 0, false);
         });
