removed GA tracking event from loading globally, and only on leaderboard pages

--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -46,3 +46,9 @@
     <% end %>
   </div>
 </section>
+
+
+<% if Rails.env.production? %>
+  <!-- GA Tracking Events -->
+  <%= render 'layouts/tracking_events' %>
+<% end %>
