--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
 
   <% if Rails.env.production? %>
     <!-- GA Tracking Events -->
-    <%= render 'layouts/tracking_events' %>
+    <%# render 'layouts/tracking_events' %>
 
     <script type="text/javascript">
         rg4js('apiKey', 'K9ewfiwAigDX1AXxc+lC0Q==');
