added logic to track event once traffic hits leaderboard pages

--- a/app/views/layouts/_tracking_events.html.erb
+++ b/app/views/layouts/_tracking_events.html.erb
@@ -31,6 +31,10 @@ var analytics = {
 };
 
 $(document).ready(function(){
+    var lbname = "Leaderboard Activity";
+
+    console.log('Leaderboard page loaded');
+    analyticsEvent("Leaderboard Page Load", "Open", lbname, 0, false);
     analytics.init();
 });
 </script>
