--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,5 +1,5 @@
 <% if !is_mobile? %>
-<% @body_class = 'games-page' %>
+<% content_for :body_class, "games-page" %>
 <% end %>
 
 <h1 class="page__title">Play free games. Earn real cash.</h1>
