--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, "Forgot password") %>
+<% content_for :body_class, "page-background" %>
+
 <h1>Forgot password</h1>
 
 <div class="row">
