--- a/app/views/static_pages/home_mobile.html.erb
+++ b/app/views/static_pages/home_mobile.html.erb
@@ -1,4 +1,4 @@
-<% @body_class = "mobile-home" %>
+<% content_for :body_class, "mobile-home" %>
 
 <div class="sign-up">
 	  <%= render 'users/form_mobile'%>
