--- a/app/views/static_pages/redeem.html.erb
+++ b/app/views/static_pages/redeem.html.erb
@@ -1,4 +1,4 @@
-<% @body_class = 'interior-page' %>
+<% content_for :body_class, "interior-page" %>
 
 <div class="interior-hero">
   <h1 class="interior-hero__title">Balance: <span class='credits'>
