--- a/app/views/static_pages/redeem_mobile.html.erb
+++ b/app/views/static_pages/redeem_mobile.html.erb
@@ -1,4 +1,4 @@
-<% @body_class = "interior-page" %>
+<% content_for :body_class, "interior-page" %>
 
 <% provide(:title, 'Redeem') %>
 <div class='my-balance'>
