--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,5 @@
+<% content_for :body_class, "page-background" %>
+
 <div class="row">
   <div class="span5">
     <div class="welcomeBox">Welcome</div>
