--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% @body_class = "desktop-home" %>
+<% content_for :body_class, "desktop-home page-background" %>
 
 <a href="/signin" class="desktop-signin">Sign In</a>
 <div class="sign-up">
@@ -23,13 +23,13 @@
   <div class='bottom-content'>
     <%= image_tag 'white_down.png', :class => 'white-down floating' %>
       <h2>How it Works </h2>
-        <%= embedded_svg('svgs/bottom_image_1.svg', :class => 'how-it-works-image') %>
+        <img src="/assets/landing_icon_1.png" class="how-it-works-image">
         <p>Play any game to<br/> earn credits</p>
 
-          <%= embedded_svg('svgs/bottom_image_2.svg', :class => 'how-it-works-image') %>
+        <img src="/assets/landing_icon_2.png" class="how-it-works-image">
         <p>Earn enough<br/> credits to cash <br/> out</p>
 
-          <%= embedded_svg('svgs/bottom_image_3.svg', :class => 'how-it-works-image') %>
+        <img src="/assets/landing_icon_3.png" class="how-it-works-image">
         <p>Request a cash out!<br/> We will redeem your <br/> credits and send you <br/> cash within 24 hours.</p>
   </div>
 </div>
