--- a/app/views/static_pages/redeem_credits.html.erb
+++ b/app/views/static_pages/redeem_credits.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Redeem') %>
 
-<% @body_class = 'interior-page' %>
+<% content_for :body_class, "interior-page" %>
 
 <div class="interior-hero">
   <h1 class="interior-hero__title">Balance: <span class='credits'>
