--- a/app/views/static_pages/refer.html.erb
+++ b/app/views/static_pages/refer.html.erb
@@ -1,4 +1,4 @@
-<% @body_class = 'interior-page' %>
+<% content_for :body_class, "interior-page" %>
 
 <% provide(:title, 'Refer') %>
 <div class="interior-hero">
