--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,9 +48,9 @@
           <div class="nav-dropdown">
             <p class="nav-dropdown__user-credits"><%= current_user.lifetime_credits %><span>cc</span></p>
             <p class="nav-dropdown__name"><i class="fa fa-caret-down"></i> <%= current_user.name %></p>
-            <% if current_user.oath_image %>
-              <span class="nav-dropdown__avatar" style="background-image: url(<%= current_user.oath_image %>);">
-            <% end %>
+            <%# if current_user.oath_image %>
+              <span class="nav-dropdown__avatar" style="background-image: url(<%= current_user.oath_image %>); background-color: grey;">
+            <%# end %>
               <!-- <i class="fa fa-exclamation notification"></i> -->
             </span>
             <ul class="nav-dropdown__list">
