added coin icon, fixed firefox bouncing arrow issue and changed navbar to purple

--- a/app/assets/stylesheets/interior_pages.css.scss
+++ b/app/assets/stylesheets/interior_pages.css.scss
@@ -7,7 +7,7 @@
   background: $white !important;
 }
 .interior-hero {
-  background-color: $orange;
+  background-color: $purple;
   padding: 40px 5% 40px 5%;
   text-align: center;
   color: $white;
