--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -97,7 +97,8 @@ p {
         z-index: 100;
       }
       .interior-page & {
-        box-shadow: 0 5px 10px #D29A5B;
+        // box-shadow: 0 5px 10px #D29A5B;
+        box-shadow: 0 5px 10px #372850;
       }
     }
   }
@@ -119,10 +120,23 @@ p {
 .nav-dropdown__user-credits {
   font-size: 14px;
   display: inline-block;
-  background: $orange-light;
+  background: $purple-light;
   border-radius: 100px;
   color: $red;
-  padding: 2px 10px;
+  padding: 5px 10px 5px 35px;;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    height: 27px;
+    width: 27px;
+    background-image: url(purple_credits.jpg);
+    background-size: 105%;
+    border-radius: 100%;
+    left: 3px;
+    top: 3px;
+  }
 }
 .nav-dropdown__avatar {
   background-color: $clouds;
@@ -182,7 +196,7 @@ p {
   display: inline-block;
   width: 100%;
   height: 60px;
-  background-color: $orange;
+  background-color: $purple;
   overflow: visible;
   position: relative;
   z-index: 10;
