--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -11,6 +11,7 @@ $white: #fff;
 $red: #e74c3c;
 $orange: #F2BB7C;
 $orange-light: #FFD9AD;
+$orange-flat: #e67e22;
 $dark-orange: #edae65;
 $silver: #bdc3c7;
 $clouds: #ecf0f1;
