swapped coin icon to darker dollar sign version

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -131,7 +131,7 @@ p {
     position: absolute;
     height: 37px;
     width: 37px;
-    background-image: url(purple_credits.jpg);
+    background-image: url(purple_credits.png);
     background-size: 105%;
     border-radius: 100%;
     left: 3px;
