--- a/app/views/static_pages/donate.html.erb
+++ b/app/views/static_pages/donate.html.erb
@@ -17,7 +17,7 @@
   <div class="inner-page__banner">
     <p class="page-title">
       Your support provides food, shelter, and expert medical care for thousands of animals and allows us to speak out for countless others. Thank you!
-      <span>-PAWS Staff</span>
+      <span>-PAWS</span>
     </p>
   </div>
   <ul>
