--- a/app/views/static_pages/donate_credits.html.erb
+++ b/app/views/static_pages/donate_credits.html.erb
@@ -17,7 +17,7 @@
   <div class="inner-page__banner">
     <p class="page-title">
       Your support provides food, shelter, and expert medical care for thousands of animals and allows us to speak out for countless others. Thank you!
-      <span>-PAWS Staff</span>
+      <span>-PAWS</span>
     </p>
   </div>
 
@@ -28,7 +28,7 @@
     <%= f.hidden_field :credits, :value => @amount %>
     <%= f.hidden_field :cashout_type, :value => 2 %>
       <div class='final-step'>
-        <%= f.submit "Cash out", class: "btn-submit cash-out__submit" %>
+        <%= f.submit "Donate", class: "btn-submit cash-out__submit" %>
       </div><!--/.final-step -->
   <% end %>
 
