--- a/app/views/static_pages/new_donation.html.erb
+++ b/app/views/static_pages/new_donation.html.erb
@@ -1,5 +1,7 @@
-<% provide(:title, 'Thanks!') %>
-<div class='my-balance'>
-  <h2 style='color:black'>Thanks! We will be in touch shortly to process your request!</h2>
-</div>
+<% content_for :body_class, "interior-page" %>
 
+<% provide(:title, 'Thanks!') %>
+<div class='confirmation--donate'>
+  <h2 class="confirmation__copy">Thank you for your donation to PAWS. We will review your request and confirm your donation within 24 hours.</h2>
+  <a href="/games" class="btn-purple confirmation__btn"></a>
+</div>
