added additional information to new donation email

--- a/app/views/user_notifier/send_donation_email.html.erb
+++ b/app/views/user_notifier/send_donation_email.html.erb
@@ -1,6 +1,10 @@
-Cash out!<br />
+New Donation!<br />
 
 User id: <%= @user.id %> <br />
+
+User name: <%= @user.name %> <br />
+
+User email: <%= @user.email %> <br />
 
 Credits: <%= @cash_out.credits %><br />
 
